# cd_dot_cz_price_search

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
cd_dot_cz_price_search/: __init__.py  cli.py  lambda_function.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  lambda_function.py  test_cd_dot_cz_price_search.py
