[tool.poetry]
name = "cd_dot_cz_price_search"
version = "0.1.0"
description = ""
authors = ["Jonas <jonas.kemper.biz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
bs4 = "^0.0.1"
boto3 = "^1.12.17"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
rope = "^0.16.0"
pre-commit = "^2.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
